--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 		</div>
 		
 		<script type="text/javascript" src="cordova.js"></script>
+		<script type="text/javascript" src="js/admob.js"></script>
 		<script src="librerias/jquery.js"></script>
 		<script src="librerias/bootstrap/js/bootstrap.min.js"></script>
 		
